--- a/connectfour.html
+++ b/connectfour.html
@@ -15,7 +15,7 @@
             CONNECT FOUR !
         </h1>
         
-        <div class = "grid">
+        <div class = "board">
             <div class = "slot s12 m6 l3 valign-wrapper"></div>            
             <div class = "slot s12 m6 l3 valign-wrapper"></div>            
             <div class = "slot s12 m6 l3 valign-wrapper"></div>            
@@ -65,6 +65,9 @@
             <div class = "slot s12 m6 l3 valign-wrapper"></div>            
             
         </div>
+
+    <div class = "player-one-piece"></div>
+    <div class = "player-two-piece"></div>
 
         <script src="check_Board.js"></script>
         <script src="connectfour.js"></script>
