--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     </head>
-    <body style = "background-color: rgb(0, 110, 255);">
+    <body>
         
         <h1> 
             CONNECT FOUR !
@@ -18,7 +18,6 @@
         <div class = "grid">
             <div class = "slot s12 m6 l3 valign-wrapper">
                 <div id ="cell-0-0"onclick="players_turn(0,0)" class="cell">
-                    
                     </div>
             </div>            
             <div class = "slot s12 m6 l3 valign-wrapper">
